<resources>
    <string name="app_name">ConstraintLayoutサンプル</string>
    <string name="tv_title">必要な情報を入力してください。</string>
    <string name="tv_mailtitle">メールのタイトルを入力してください。</string>
    <string name="tv_name">名前</string>
    <string name="tv_mail">メールアドレス</string>
    <string name="tv_comment">質問内容</string>
    <string name="tv_output"></string>
    <string name="dialog_title">送信確認</string>
    <string name="dialog_msg">メッセージを送信しますか？</string>
    <string name="dialog_btn_ok">はい</string>
    <string name="dialog_btn_ng">いいえ</string>
    <string name="dialog_ok_toast"></string>
    <string name="dialog_ng_toast">送信をキャンセルしました</string>
    <string name="bt_confirm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_clear">クリア</string>
</resources>